# StudyBot

./: main.py  pyproject.toml  readme.md  setup.py  אזרחות.txt  מדמח.txt
